--- a/src/ContactForm/ContactForm.module.css
+++ b/src/ContactForm/ContactForm.module.css
@@ -14,7 +14,7 @@
   flex-direction: column;
   font-size: 20px;
   font-weight: lighter;
-  input {
+  .input {
     padding: 10px;
     border-radius: 5px;
     font-size: 20px;
@@ -25,4 +25,13 @@
   padding: 10px;
   margin: 0 auto;
   border-radius: 5px;
+  font-size: 20px;
+  &:hover {
+    background-color: rgb(174, 174, 174);
+    cursor: pointer;
+  }
+}
+
+.error {
+  color: red;
 }
