--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -12,6 +12,10 @@
     border-radius: 5px;
     padding: 10px;
     font-size: 20px;
+    cursor: pointer;
+    &:hover {
+      background-color: rgb(174, 174, 174);
+    }
   }
 }
 
